--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "type": "commonjs",
   "main": "build/index.js",
   "scripts": {
-    "start": "tsc && node .",
+    "start": "ts-node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@hey-api/client-fetch": "^0.10.2",
     "@hey-api/openapi-ts": "^0.67.6",
     "@types/node": "^22.15.23",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
